--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 #portfolio-main-header.content.green-background {
-	background-color: rgb(0, 209, 157);
+	background-color: #00d19d;
 }
 
 #portfolio-main-header-text > div{
@@ -13,7 +13,7 @@ body {
 }
 
 #portfolio-main-header.content.red-background {
-	background-color: rgb(248, 63, 64);
+	background-color: #f83f40;
 }
 
 #main-menu.menu.ui {
